--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "scripts": {
     "build": "turbo run build",
     "build:docker:dialog": "docker build -t telli-dialog -f ./apps/dialog/Dockerfile .",
+    "db:migrate": "turbo run db:migrate",
     "dev": "turbo run dev:local",
-    "lint": "turbo run lint"
+    "format:check": "turbo run format:check",
+    "lint": "turbo run lint",
+    "test": "turbo run test"
   },
   "packageManager": "pnpm@9.6.0",
   "dependencies": {},
