--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "turbo run dev:local",
     "format:check": "turbo run format:check",
     "lint": "turbo run lint",
-    "test": "turbo run test"
+    "test": "turbo run test",
+    "types": "turbo run types"
   },
   "packageManager": "pnpm@9.6.0",
   "dependencies": {},
