TD-350 fix tsconfig.json

--- a/apps/dialog/tsconfig.json
+++ b/apps/dialog/tsconfig.json
@@ -7,5 +7,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"]
 }
