--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -137,6 +137,7 @@
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.3",
     "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "5.5.3",
     "express": "4.21.2",
     "jose": "6.0.6",
     "oidc-provider": "8.8.0",
