TD-350 pass through database url env variable

--- a/turbo.json
+++ b/turbo.json
@@ -22,7 +22,8 @@
       "cache": false
     },
     "db:migrate": {
-      "dependsOn": ["^db:migrate"]
+      "dependsOn": ["^db:migrate"],
+      "env": ["DATABASE_URL"]
     },
     "format:check": {
       "dependsOn": ["^format:check"]
