--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -73,6 +73,7 @@
     "drizzle-kit": "0.31.1",
     "drizzle-orm": "0.39.3",
     "drizzle-zod": "0.7.1",
+    "eslint-config-turbo": "2.5.5",
     "he": "1.2.0",
     "import-in-the-middle": "1.14.2",
     "ioredis": "5.6.0",
