--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -79,16 +79,16 @@ jobs:
           done
 
       - name: Run migrations or seed database (if applicable)
-        run: pnpm db:migrate && pnpm db:seed
+        run: pnpm --filter telli-dialog db:migrate && pnpm --filter telli-dialog db:seed
 
       - name: Start application
         run: |
-          NODE_ENV=test pnpm build:envless
-          pnpm start &
-          pnpm start:oidc &
+          NODE_ENV=test pnpm --filter telli-dialog build:envless
+          pnpm --filter telli-dialog start:oidc &
+          pnpm --filter telli-dialog start &
 
       - name: Run E2E tests
-        run: pnpm e2e
+        run: pnpm --filter telli-dialog e2e
         env:
           CI: true
 
