--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "packageManager": "pnpm@9.6.0",
   "dependencies": {},
   "devDependencies": {
-    "turbo": "2.5.5"
+    "turbo": "2.5.5",
+    "@playwright/test": "1.50.1"
   }
 }
