--- a/apps/dialog/Dockerfile
+++ b/apps/dialog/Dockerfile
@@ -48,12 +48,10 @@ USER nodejs
 
 WORKDIR /app
 # copy nextjs application 
-COPY --from=builder --chown=nodejs:nodejs /app .
+COPY --from=builder --chown=nodejs:nodejs /app/apps/dialog/.next/standalone ./
+COPY --from=builder --chown=nodejs:nodejs /app/apps/dialog/.next/static ./apps/dialog/.next/static
 # copy whole db folder in order to run database migrations
-COPY --from=pruner --chown=nodejs:nodejs /app/apps/dialog/src/db /app/apps/dialog/src/db
-# List files of directory here
-RUN ls -al /app/apps/dialog/src/db
-WORKDIR /app/apps/dialog
+COPY --from=pruner --chown=nodejs:nodejs /app/apps/dialog/src/db /app/src/db
 
 ARG PORT=3000
 ENV PORT=${PORT}
@@ -63,4 +61,4 @@ ENV TURBO_TELEMETRY_DISABLED=1
 EXPOSE ${PORT}
 
 # https://nextjs.org/docs/pages/api-reference/config/next-config-js/output
-CMD turbo db:migrate && HOSTNAME=0.0.0.0 node server.js
+CMD turbo db:migrate && HOSTNAME=0.0.0.0 node ./apps/dialog/server.js
