TD-361 update path to drizzle.config

--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -23,16 +23,16 @@
     "test:watch": "vitest",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "db:generate": "drizzle-kit generate --config=./src/db/drizzle.config.ts",
-    "db:migrate": "drizzle-kit migrate --config=./src/db/drizzle.config.ts",
-    "db:migrate:local": "dotenvx run -f .env.local -- drizzle-kit migrate --config=./src/db/drizzle.config.ts",
-    "db:migrate:op": "ENVIRONMENT=development op run --env-file=\"./.env\" -- drizzle-kit migrate --config=./src/db/drizzle.config.ts",
+    "db:generate": "drizzle-kit generate --config=./drizzle.config.ts",
+    "db:migrate": "drizzle-kit migrate --config=./drizzle.config.ts",
+    "db:migrate:local": "dotenvx run -f .env.local -- drizzle-kit migrate --config=./drizzle.config.ts",
+    "db:migrate:op": "ENVIRONMENT=development op run --env-file=\"./.env\" -- drizzle-kit migrate --config=./drizzle.config.ts",
     "db:seed": "tsx src/db/seed/index.ts",
     "db:seed:op": "ENVIRONMENT=development op run --env-file=\"./.env\" -- pnpm tsx src/db/seed/index.ts",
     "db:seed:local": "ENVIRONMENT=development dotenvx run -f .env.local -- pnpm tsx src/db/seed/index.ts",
-    "db:studio": "dotenv -e .env -- drizzle-kit studio --config=src/db/drizzle.config.ts",
+    "db:studio": "dotenv -e .env -- drizzle-kit studio --config=./drizzle.config.ts",
     "otc:dump": "dotenv -e .env -- pnpm tsx src/scripts/mirgrate_otc/index.ts",
-    "drizzle:up": "drizzle-kit up --config=src/db/drizzle.config.ts",
+    "drizzle:up": "drizzle-kit up --config=./drizzle.config.ts",
     "e2e": "playwright test",
     "e2e:api": "dotenvx run -f .env.local -- playwright test tests/api/",
     "e2e:op": "ENVIRONMENT=e2e pnpm op -- playwright test",
