TD-362 run docker build and deploy staging for ci tasks

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -45,7 +45,7 @@ jobs:
     needs: checks
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: github.ref == 'refs/heads/main'
+    if: ${{ github.ref == 'refs/heads/main' }} && ${{ startsWith(github.head_ref, 'ci/') }}
 
     steps:
       - name: Checkout code
