--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -45,7 +45,7 @@ jobs:
     needs: checks
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: ${{ github.ref == 'refs/heads/main' }} && ${{ startsWith(github.head_ref, 'ci/') }}
+    if: ${{ startsWith(github.head_ref, 'ci/') }} || ${{ github.ref == 'refs/heads/main' }}
 
     steps:
       - name: Checkout code
