--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -16,6 +16,13 @@ jobs:
     timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
+      - name: Log some information
+        run: |
+          echo "github_ref: ${{ github.ref }}"
+          echo "ref name: ${{ github.ref_name }}"
+          echo "head_ref: ${{ github.head_ref }}"
+          echo "base_ref: ${{ github.baseref }}"
+
       - name: Checkout code
         uses: actions/checkout@v4
 
