--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -22,6 +22,8 @@ jobs:
           echo "ref name: ${{ github.ref_name }}"
           echo "head_ref: ${{ github.head_ref }}"
           echo "base_ref: ${{ github.baseref }}"
+          echo "if condition: ${{ github.event_name == 'push' && startsWith(github.ref_name, 'ci/') }} || ${{(github.event_name == 'pull_request' && github.base_ref == 'main')}}"
+          echo "if condtion2: ${{ (github.event_name == 'push' && startsWith(github.ref_name, 'ci/')) || (github.event_name == 'pull_request' && github.base_ref == 'main') }}"
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -52,9 +54,7 @@ jobs:
     needs: checks
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: |
-      (github.event_name == 'push' && startsWith(github.ref_name, 'ci/')) ||
-      (github.event_name == 'pull_request' && github.base_ref == 'main')
+    if: ${{ (github.event_name == 'push' && startsWith(github.ref_name, 'ci/')) || (github.event_name == 'pull_request' && github.base_ref == 'main') }}
 
     steps:
       - name: Checkout code
