--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -21,9 +21,9 @@ jobs:
           echo "github_ref: ${{ github.ref }}"
           echo "ref name: ${{ github.ref_name }}"
           echo "head_ref: ${{ github.head_ref }}"
-          echo "base_ref: ${{ github.baseref }}"
-          echo "if condition: ${{ github.event_name == 'push' && startsWith(github.ref_name, 'ci/') }} || ${{(github.event_name == 'pull_request' && github.base_ref == 'main')}}"
-          echo "if condtion2: ${{ (github.event_name == 'push' && startsWith(github.ref_name, 'ci/')) || (github.event_name == 'pull_request' && github.base_ref == 'main') }}"
+          echo "base_ref: ${{ github.base_ref }}"
+          echo "event_name: ${{github.event_name}}"
+          echo "if condition: ${{ startsWith(github.head_ref, 'ci/') }} || ${{github.ref == 'main'}}"
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -54,7 +54,7 @@ jobs:
     needs: checks
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: ${{ (github.event_name == 'push' && startsWith(github.ref_name, 'ci/')) || (github.event_name == 'pull_request' && github.base_ref == 'main') }}
+    if: ${{ startsWith(github.head_ref, 'ci/')) || (github.ref == 'refs/heads/main') }}
 
     steps:
       - name: Checkout code
