--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -54,7 +54,9 @@ jobs:
     needs: checks
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: ${{ startsWith(github.head_ref, 'ci/')) || (github.ref == 'refs/heads/main') }}
+    if: |
+      startsWith(github.head_ref, 'ci/') ||
+      github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout code
