TD-364 change some configurations for turbo and eslint

--- a/turbo.json
+++ b/turbo.json
@@ -47,6 +47,9 @@
       "dependsOn": ["^db:seed"],
       "env": ["DATABASE_URL"]
     },
+    "format": {
+      "dependsOn": ["^format"]
+    },
     "format:check": {
       "dependsOn": ["^format:check"]
     },
