--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "op": "op run --env-file=\"./.env\" --no-masking",
     "op:signin": "eval $(op signin)",
-    "dev": "next dev --turbo",
-    "dev:op": "ENVIRONMENT=development pnpm op -- next dev --turbo",
-    "dev:local": "dotenvx run -f .env.local -- next dev --turbo",
+    "dev": "concurrently \"pnpm start:oidc\" \"next dev -p 3000 --turbo\"",
     "dev:e2e": "ENVIRONMENT=e2e pnpm op -- next dev --turbo",
     "build": "next build",
     "build:envless": "next build --experimental-build-mode compile",
@@ -134,6 +132,7 @@
     "@types/react": "19.0.3",
     "@types/react-dom": "19.0.2",
     "@types/react-syntax-highlighter": "15.5.13",
+    "concurrently": "9.2.0",
     "esbuild": "0.25.5",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.3",
