--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build:docker:dialog": "docker build -t telli-dialog -f ./apps/dialog/Dockerfile .",
     "db:migrate": "turbo run db:migrate",
     "db:seed": "turbo run db:seed",
-    "dev": "turbo run dev:local",
+    "dev": "turbo run dev",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "turbo run lint",
