--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -34,10 +34,10 @@ jobs:
       - name: Check formatting
         run: pnpm run format:check
       - name: Check types
-        run: pnpm run types
+        run: pnpm run check-types
       - name: Check linter
         run: pnpm run lint
-      - name: Check linter
+      - name: Check unit tests
         run: pnpm run test
 
   build-staging:
