TD-362 run docker build and deploy staging for ci tasks (#127)
* TD-362 run docker build and deploy staging for ci tasks

* TD-362 run pipeline if one condition is met or the other

* TD-362 print some context vars

* TD-362 add if clause to the job build-staging

* TD-362 try to fix if condition

* TD-362 try to fix if condition

* TD-362 fix if condition

* TD-362 remove debug action

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -45,7 +45,9 @@ jobs:
     needs: checks
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: github.ref == 'refs/heads/main'
+    if: |
+      startsWith(github.head_ref, 'ci/') ||
+      github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout code
