--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
     "build:docker:dialog": "docker build -t telli-dialog -f ./apps/dialog/Dockerfile .",
     "db:migrate": "turbo run db:migrate",
     "db:seed": "turbo run db:seed",
-    "dev": "turbo run dev:local",
-    "format:check": "turbo run format:check",
+    "dev": "turbo run dev",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "lint": "turbo run lint",
     "test": "turbo run test",
-    "types": "turbo run types"
+    "check-types": "turbo run check-types"
   },
   "packageManager": "pnpm@9.6.0",
   "dependencies": {},
   "devDependencies": {
+    "prettier": "3.4.2",
     "turbo": "2.5.5"
   }
 }
