--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3001 --turbo",
     "build": "next build",
+    "build:envless": "next build --experimental-build-mode compile",
     "start": "next start",
     "lint": "next lint",
     "check-types": "tsc --noEmit",
