--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -18,19 +18,39 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Use Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
-      - name: Install PNPM
+          cache: 'pnpm'
+      - name: Install pnpm
         run: npm install -g pnpm@9.6.0
       - name: Install dependencies
         run: pnpm install
+
+      - name: Cache turbo build cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: turbo-${{ runner.os }}-${{ hashFiles('**/turbo.json') }}-${{ github.sha }}
+          restore-keys: |
+            turbo-${{ runner.os }}-
 
   audit:
     runs-on: ubuntu-latest
     needs: install
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.nvmrc'
+          cache: 'pnpm'
+      - name: Install pnpm
+        run: npm install -g pnpm@9.6.0
+      - name: Install dependencies
+        run: pnpm install
       - name: Audit dependencies
         run: pnpm audit --audit-level=critical
 
@@ -38,6 +58,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: install
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.nvmrc'
+          cache: 'pnpm'
+      - name: Install pnpm
+        run: npm install -g pnpm@9.6.0
+      - name: Install dependencies
+        run: pnpm install
       - name: Check formatting
         run: pnpm run format:check
 
@@ -45,6 +76,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: install
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.nvmrc'
+          cache: 'pnpm'
+      - name: Install pnpm
+        run: npm install -g pnpm@9.6.0
+      - name: Install dependencies
+        run: pnpm install
       - name: Check types
         run: pnpm run check-types
 
@@ -52,6 +94,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: install
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.nvmrc'
+          cache: 'pnpm'
+      - name: Install pnpm
+        run: npm install -g pnpm@9.6.0
+      - name: Install dependencies
+        run: pnpm install
       - name: Check linter
         run: pnpm run lint
 
@@ -59,6 +112,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: install
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.nvmrc'
+          cache: 'pnpm'
+      - name: Install pnpm
+        run: npm install -g pnpm@9.6.0
+      - name: Install dependencies
+        run: pnpm install
       - name: Check unit tests
         run: pnpm run test
 
@@ -73,7 +137,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Build Docker image
         run: |
