--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -12,7 +12,7 @@ env:
   IONOS_DOCKER_REGISTRY_TOKEN: ${{ secrets.IONOS_DOCKER_REGISTRY_TOKEN }}
 
 jobs:
-  checks:
+  install:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
@@ -39,7 +39,7 @@ jobs:
           restore-keys: |
             turbo-${{ runner.os }}-
 
-  audit:
+  checks:
     runs-on: ubuntu-latest
     needs: install
     steps:
