--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -35,7 +35,7 @@ jobs:
           restore-keys: |
             turbo-${{ runner.os }}-
 
-  audit:
+  checks:
     runs-on: ubuntu-latest
     needs: install
     steps:
