--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -128,7 +128,7 @@ jobs:
   build_push_docker_image_dialog:
     name: Build and push docker image telli-dialog
     runs-on: ubuntu-latest
-    needs: [audit, check_formatting, check_types, check_linter, check_unit_tests]
+    needs: [checks, check_formatting, check_types, check_linter, check_unit_tests]
     timeout-minutes: 10
     if: |
       startsWith(github.head_ref, 'ci/') ||
@@ -153,7 +153,7 @@ jobs:
   build_push_docker_image_admin:
     name: Build and push docker image telli-admin
     runs-on: ubuntu-latest
-    needs: [audit, check_formatting, check_types, check_linter, check_unit_tests]
+    needs: [checks, check_formatting, check_types, check_linter, check_unit_tests]
     timeout-minutes: 10
     if: |
       startsWith(github.head_ref, 'ci/') ||
