--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -18,13 +18,14 @@
     "@types/react-dom": "19.0.2",
     "eslint-config-next": "15.1.3",
     "next": "15.3.4",
+    "next-auth": "4.24.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "typescript": "5.7.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.2.0",
-    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/postcss": "4.1.11",
     "@telli/typescript-config": "workspace:*",
     "@types/react": "19.0.3",
     "@types/react-dom": "19.0.2",
