--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -2,7 +2,9 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "_version": "2.0.0",
   "extends": "@telli/typescript-config/nextjs.json",
-  "compilerOptions": {},
+  "compilerOptions": {
+    "baseUrl": "./src"
+  },
   "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", "src", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
