--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,17 +1,44 @@
 {
-  "name": "@telli/ui",
-  "type": "module",
+  "name": "ui",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "build": "tsc"
+    "lint": "eslint . --max-warnings 0"
   },
-  "exports": {
-    "./test": {
-      "types": "./src/test.ts",
-      "default": "./dist/test.js"
-    }
+  "dependencies": {
+    "@radix-ui/react-slot": "1.2.3",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "lucide-react": "0.536.0",
+    "tailwind-merge": "3.0.1",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "3.2.0",
+    "@tailwindcss/postcss": "4.1.11",
     "@telli/typescript-config": "workspace:*",
-    "typescript": "latest"
+    "@turbo/gen": "2.5.5",
+    "@types/eslint": "9.6.1",
+    "@types/react": "19.0.3",
+    "@types/react-dom": "19.0.2",
+    "@types/react-syntax-highlighter": "15.5.13",
+    "autoprefixer": "10.4.21",
+    "eslint": "9.17.0",
+    "eslint-config-next": "15.1.3",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "5.5.3",
+    "postcss": "8.4.49",
+    "prettier": "3.4.2",
+    "prettier-eslint": "16.4.2",
+    "react": "19.0.0",
+    "tailwindcss": "4.1.11",
+    "typescript": "5.7.2"
+  },
+  "exports": {
+    "./globals.css": "./src/styles/globals.css",
+    "./postcss.config": "./postcss.config.mjs",
+    "./tailwind.config": "./tailwind.config.ts",
+    "./lib/*": "./src/lib/*.ts",
+    "./components/*": "./src/components/*.tsx"
   }
 }
