--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,9 +1,13 @@
 {
-  "extends": "@telli/typescript-config/base.json",
+  "extends": "@telli/typescript-config/react-library.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src"
+    //"outDir": "dist"
   },
-  "include": ["src"],
+  "baseUrl": ".",
+  "paths": {
+    "@ui/*": ["./src/*"],
+    "@ui/components*": ["./src/components/*"]
+  },
+  "include": ["."],
   "exclude": ["node_modules", "dist"]
 }
