TD-368 cleanup config files

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "extends": "@telli/typescript-config/react-library.json",
-  "compilerOptions": {
-    //"outDir": "dist"
-  },
+  "compilerOptions": {},
   "baseUrl": ".",
   "paths": {
     "@ui/*": ["./src/*"],
