--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -12,21 +12,18 @@
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
-  "packageManager": "pnpm@9.6.0",
+  "packageManager": "pnpm@9.15.1",
   "dependencies": {
-    "@types/react": "19.0.3",
-    "@types/react-dom": "19.0.2",
-    "eslint-config-next": "15.1.3",
+    "ui": "workspace:*",
     "next": "15.3.4",
     "next-auth": "4.24.11",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "typescript": "5.7.2"
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.2.0",
-    "@tailwindcss/postcss": "4.1.11",
     "@telli/typescript-config": "workspace:*",
+    "@types/node": "20.17.12",
     "@types/react": "19.0.3",
     "@types/react-dom": "19.0.2",
     "@types/react-syntax-highlighter": "15.5.13",
