--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,9 +1,11 @@
 {
-  "extends": "@telli/typescript-config/base.json",
-  "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src"
+  "extends": "@telli/typescript-config/react-library.json",
+  "compilerOptions": {},
+  "baseUrl": ".",
+  "paths": {
+    "@ui/*": ["./src/*"],
+    "@ui/components*": ["./src/components/*"]
   },
-  "include": ["src"],
+  "include": ["."],
   "exclude": ["node_modules", "dist"]
 }
