--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -55,6 +55,14 @@
     "@dotenvx/dotenvx": "1.44.1",
     "@hookform/resolvers": "3.10.0",
     "@mozilla/readability": "0.6.0",
+    "@opentelemetry/api": "1.9.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "0.203.0",
+    "@opentelemetry/exporter-trace-otlp-http": "0.203.0",
+    "@opentelemetry/resources": "2.0.1",
+    "@opentelemetry/sdk-metrics": "2.0.1",
+    "@opentelemetry/sdk-node": "0.203.0",
+    "@opentelemetry/sdk-trace-node": "2.0.1",
+    "@opentelemetry/semantic-conventions": "1.36.0",
     "@radix-ui/react-alert-dialog": "1.1.6",
     "@radix-ui/react-checkbox": "1.1.4",
     "@radix-ui/react-dropdown-menu": "2.1.6",
