--- a/devops/docker/monitoring.yml
+++ b/devops/docker/monitoring.yml
@@ -1,3 +1,4 @@
+# run 'docker compose -f ./devops/docker/monitoring.yml up' from project root folder
 services:
   prometheus:
     image: prom/prometheus:latest
@@ -9,13 +10,49 @@ services:
       - --storage.tsdb.retention.time=1h
       - --web.listen-address=0.0.0.0:9090
       - --log.level=info
-    restart: always
+    restart: unless-stopped
     ports:
       - '9090:9090'
     volumes:
       - ./configs/prometheus.yml:/etc/prometheus/prometheus.yml
-      - prometheus_data:/prometheus
+
+  jaeger:
+    # https://github.com/jaegertracing/jaeger/blob/v2.9.0/cmd/jaeger/internal/all-in-one.yaml
+    image: jaegertracing/jaeger:2.9.0
+    container_name: jaeger
+    command: ['--config=/jaeger/config.yml']
+    ports:
+      - '4317:4317' # otlp/grpc
+      - '4318:4318' # otlp/http
+      - '5775:5775/udp' # zipkin.thrift over compact thrift protocol
+      - '6831:6831/udp' # jaeger.thrift over compact thrift protocol
+      - '6832:6832/udp' # jaeger.thrift over binary thrift protocol
+      - '5778:5778' # service configs
+      - '16686:16686' # UI
+      - '14268:14268' # jaeger.thrift directly from clients
+      - '9411:9411' # Zipkin compatible endpoint
+      - '8888:8888' # /metrics endpoint that can be scraped by prometheus
+      - '13133:13133' # /status for health checks
+    environment:
+      - LOG_LEVEL=debug
+    volumes:
+      - ./jaeger/config.yml:/jaeger/config.yml
+      - ./jaeger/ui-config.json:/jaeger/ui-config.json
+    restart: unless-stopped
+
+  grafana:
+    # https://grafana.com/docs/grafana/latest/setup-grafana/installation/docker/#run-grafana-via-docker-compose
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - '3030:3000'
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=geheim
+    restart: unless-stopped
+    volumes:
+      - grafana_data:/var/lib/grafana
 
 volumes:
-  prometheus_data:
+  grafana_data:
     driver: local
