--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -36,9 +36,9 @@
     "e2e:op": "ENVIRONMENT=e2e pnpm op -- playwright test",
     "e2e:headed": "ENVIRONMENT=e2e pnpm op -- playwright test --headed",
     "e2e:ui": "ENVIRONMENT=e2e pnpm op -- playwright test --ui",
-    "k6:build": "node e2e/load_test/esbuild.k6.config.js",
-    "k6:run:ui": "K6_BROWSER_HEADLESS=false pnpm k6:build && K6_BROWSER_HEADLESS=false k6 run e2e/load_test/index.js -e K6_BROWSER_HEADLESS=false",
-    "k6:run": "pnpm k6:build && K6_BROWSER_HEADLESS=true K6_BROWSER_ARGS='no-sandbox' k6 run e2e/load_test/index.js -e K6_BROWSER_HEADLESS=true -e K6_BROWSER_ARGS='no-sandbox'",
+    "k6:build": "node e2e/load_test/esbuild.k6.config.mjs",
+    "k6:run:ui": "K6_BROWSER_HEADLESS=false pnpm k6:build && K6_BROWSER_HEADLESS=false k6 run e2e/load_test/run.js -e K6_BROWSER_HEADLESS=false",
+    "k6:run": "pnpm k6:build && K6_BROWSER_HEADLESS=true K6_BROWSER_ARGS='no-sandbox' k6 run e2e/load_test/run.js -e K6_BROWSER_HEADLESS=true -e K6_BROWSER_ARGS='no-sandbox'",
     "start:cluster": "pm2 start e2e/load_test/ecosystem.config.js",
     "stop:cluster": "pm2 stop all",
     "delete:cluster": "pm2 delete all",
