--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -11,7 +11,8 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@ui/components",
-    "utils": "@ui/lib/utils"
+    "components": "@telli/ui/components",
+    "utils": "@telli/ui/lib/utils",
+    "lib": "@telli/ui/lib"
   }
 }
