--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -22,11 +22,12 @@
     "@opentelemetry/sdk-node": "0.203.0",
     "@opentelemetry/sdk-trace-node": "2.0.1",
     "@opentelemetry/semantic-conventions": "1.36.0",
+    "@telli/ui": "workspace:*",
+    "lucide-react": "0.536.0",
     "next": "15.3.4",
     "next-auth": "4.24.11",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "ui": "workspace:*"
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.2.0",
