TD-424 add missing dependencies for jaeger exporter

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -15,11 +15,13 @@
   "packageManager": "pnpm@9.15.1",
   "dependencies": {
     "@opentelemetry/api": "1.9.0",
+    "@opentelemetry/exporter-jaeger": "2.1.0",
     "@opentelemetry/exporter-metrics-otlp-http": "0.203.0",
     "@opentelemetry/exporter-trace-otlp-http": "0.203.0",
     "@opentelemetry/resources": "2.0.1",
     "@opentelemetry/sdk-metrics": "2.0.1",
     "@opentelemetry/sdk-node": "0.203.0",
+    "@opentelemetry/sdk-trace-base": "2.0.1",
     "@opentelemetry/sdk-trace-node": "2.0.1",
     "@opentelemetry/semantic-conventions": "1.36.0",
     "@telli/ui": "workspace:*",
