--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -96,5 +96,5 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: test-results/**/*
+          path: apps/dialog/test-results
           retention-days: 30
