--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -3,15 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "op": "op run --env-file=\"./.env\" --no-masking",
-    "op:signin": "eval $(op signin)",
     "dev": "concurrently \"pnpm start:oidc\" \"next dev -p 3000 --turbo\"",
-    "dev:e2e": "ENVIRONMENT=e2e pnpm op -- next dev --turbo",
     "build": "next build",
     "build:envless": "next build --experimental-build-mode compile",
     "clean": "find . -type d \\( -name node_modules -o -name dist -o -name .next \\) -not -path \"./.vercel/*\" -prune -exec rm -rf {} \\;",
     "start": "next start",
-    "start:e2e": "ENVIRONMENT=e2e pnpm op -- next start",
     "start:oidc": "tsx ./e2e/vidis-mock-server.ts",
     "build:oidc": "node e2e/load_test/esbuild.oidc.config.js",
     "lint": "next lint",
@@ -24,26 +20,15 @@
     "db:generate": "dotenvx run -f .env.local -- drizzle-kit generate --config=./drizzle.config.ts",
     "db:migrate": "drizzle-kit migrate --config=./drizzle.config.ts",
     "db:migrate:local": "dotenvx run -f .env.local -- drizzle-kit migrate --config=./drizzle.config.ts",
-    "db:migrate:op": "ENVIRONMENT=development op run --env-file=\"./.env\" -- drizzle-kit migrate --config=./drizzle.config.ts",
     "db:seed": "tsx src/db/seed/index.ts",
-    "db:seed:op": "ENVIRONMENT=development op run --env-file=\"./.env\" -- pnpm tsx src/db/seed/index.ts",
     "db:seed:local": "ENVIRONMENT=development dotenvx run -f .env.local -- pnpm tsx src/db/seed/index.ts",
-    "db:studio": "dotenv -e .env -- drizzle-kit studio --config=./drizzle.config.ts",
-    "otc:dump": "dotenv -e .env -- pnpm tsx src/scripts/mirgrate_otc/index.ts",
-    "drizzle:up": "drizzle-kit up --config=./drizzle.config.ts",
     "e2e": "playwright test",
     "e2e:api": "dotenvx run -f .env.local -- playwright test tests/api/",
-    "e2e:op": "ENVIRONMENT=e2e pnpm op -- playwright test",
-    "e2e:headed": "ENVIRONMENT=e2e pnpm op -- playwright test --headed",
-    "e2e:ui": "ENVIRONMENT=e2e pnpm op -- playwright test --ui",
+    "e2e:headed": "playwright test --headed",
+    "e2e:ui": "playwright test --ui",
     "k6:build": "node e2e/load_test/esbuild.k6.config.mjs",
     "k6:run:ui": "K6_BROWSER_HEADLESS=false pnpm k6:build && K6_BROWSER_HEADLESS=false k6 run e2e/load_test/run.js -e K6_BROWSER_HEADLESS=false",
-    "k6:run": "pnpm k6:build && K6_BROWSER_HEADLESS=true K6_BROWSER_ARGS='no-sandbox' k6 run e2e/load_test/run.js -e K6_BROWSER_HEADLESS=true -e K6_BROWSER_ARGS='no-sandbox'",
-    "start:cluster": "pm2 start e2e/load_test/ecosystem.config.js",
-    "stop:cluster": "pm2 stop all",
-    "delete:cluster": "pm2 delete all",
-    "status:cluster": "pm2 status",
-    "logs:cluster": "pm2 logs"
+    "k6:run": "pnpm k6:build && K6_BROWSER_HEADLESS=true K6_BROWSER_ARGS='no-sandbox' k6 run e2e/load_test/run.js -e K6_BROWSER_HEADLESS=true -e K6_BROWSER_ARGS='no-sandbox'"
   },
   "packageManager": "pnpm@9.15.1",
   "dependencies": {
@@ -102,7 +87,6 @@
     "next-runtime-env": "3.3.0",
     "openai": "4.83.0",
     "pg": "8.13.1",
-    "pm2": "6.0.5",
     "postcss": "8.4.49",
     "qrcode.react": "4.2.0",
     "rabbitmq-client": "5.0.2",
