TD-468 setup sentry config (org and project) for Docker build and enable release generation

--- a/apps/dialog/Dockerfile
+++ b/apps/dialog/Dockerfile
@@ -22,6 +22,9 @@ RUN turbo prune --scope=telli-dialog --docker
 FROM base AS builder
 WORKDIR /app
 
+# Git is required for sentry
+RUN apk add --no-cache git
+
 # Copy lockfile and package.json's of isolated subworkspace
 COPY --from=pruner /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
 COPY --from=pruner /app/out/pnpm-workspace.yaml ./pnpm-workspace.yaml
@@ -34,14 +37,25 @@ RUN pnpm install --frozen-lockfile
 # Copy source code of isolated subworkspace
 COPY --from=pruner /app/out/full/ .
 
+# Copy git history, required for sentry to determine release name
+COPY .git ./.git
+
 ARG CI
 
 RUN --mount=type=secret,id=SENTRY_AUTH_TOKEN,env=SENTRY_AUTH_TOKEN \
+    --mount=type=secret,id=SENTRY_ORG,env=SENTRY_ORG \
+    --mount=type=secret,id=SENTRY_PROJECT,env=SENTRY_PROJECT \
     CI=${CI} \
     turbo build:envless
 # RUN --mount=type=cache,id=pnpm,target=~/.pnpm-store pnpm prune --prod --no-optional
 RUN pnpm prune --prod --no-optional
 RUN cp -r /app/apps/dialog/.next/standalone/* /app/
+
+# Final image
+FROM base AS runner
+WORKDIR /app
+
+COPY --from=builder --exclude=.git /app/ .
 
 ARG PORT=3000
 ENV PORT=${PORT}
