--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -7,10 +7,6 @@ on:
     branches:
       - main
 
-env:
-  SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-  SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
-
 jobs:
   install:
     runs-on: ubuntu-latest
@@ -138,9 +134,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build Docker image
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
+          SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
+          COMMIT_HASH: ${{ github.sha }}
         run: |
-          COMMIT_HASH=${{ github.sha }}
-          docker build --build-arg CI=${CI} --secret id=SENTRY_AUTH_TOKEN -f ./apps/dialog/Dockerfile -t telli/chatbot:$COMMIT_HASH .
+          docker build --build-arg CI=${CI} --secret id=SENTRY_AUTH_TOKEN --secret id=SENTRY_ORG --secret id=SENTRY_PROJECT -f ./apps/dialog/Dockerfile -t telli/chatbot:$COMMIT_HASH .
           docker tag telli/chatbot:$COMMIT_HASH telli.cr.de-fra.ionos.com/telli/chatbot:$COMMIT_HASH
 
       - name: Push Docker image to IONOS registry
