--- a/turbo.json
+++ b/turbo.json
@@ -22,12 +22,12 @@
     "build": {
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**", "dist/**"],
-      "passThroughEnv": ["CI", "SENTRY_AUTH_TOKEN"]
+      "passThroughEnv": ["CI", "SENTRY_AUTH_TOKEN", "SENTRY_ORG", "SENTRY_PROJECT"]
     },
     "build:envless": {
       "dependsOn": ["^build:envless"],
       "outputs": [".next/**", "!.next/cache/**", "dist/**"],
-      "passThroughEnv": ["CI", "SENTRY_AUTH_TOKEN"]
+      "passThroughEnv": ["CI", "SENTRY_AUTH_TOKEN", "SENTRY_ORG", "SENTRY_PROJECT"]
     },
     "check-types": {
       "dependsOn": ["^check-types"]
